# Rp2040Matrix_14-03-2024

./: README.md
Draft_Manual/: RpMatrix_V3_Manual.doc
Firmware/: CMakeLists.txt  Mapping_Caculator_Helper_V3.ods  config.ini
Firmware/lib/: CMakeLists.txt
Firmware/lib/Peripherals/: Average.c  BH1730.c  CIE1931.c  CMakeLists.txt  ads1x1x.c  flashPicoLED.c  i2cPico.c  i2cPicoBusScan.c
Firmware/lib/Peripherals/include/: Average.h  BH1730.h  CIE1931.h  ads1x1x.h  flashPicoLED.h  i2cPico.h  i2cPicoBusScan.h
Firmware/lib/no-OS-FatFS-SD-SPI-RPi-Pico/: CMakeLists.txt
Firmware/lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/sd_driver/: hw_config.c
Firmware/src/: CMakeLists.txt  SD_Card_Images.c  SD_Card_Images.h  commands.c  commands.h  flash_image_storage.c  flash_image_storage.h  font_7x5.h  graphics.c  graphics.h  hub75.c  hub75.h  hub75.pio  inputs.c  inputs.h  interfaces.h  main.c  main.h
Firmware/vscode - Copy/: launch.json  settings.json
Hardware/: Library.kicad_sym  Rp2040Matrix_14-03-2024.kicad_pcb  Rp2040Matrix_14-03-2024.kicad_prl  Rp2040Matrix_14-03-2024.kicad_pro  Rp2040Matrix_14-03-2024.kicad_sch
Hardware/Library.pretty/: MOLEX_104031-0811.kicad_mod  TF-CARD H1.8.kicad_mod
Hardware/production-14-03-2024/: bom.csv  designators.csv  netlist.ipc  positions.csv
